Fixed incompatability with nbshpinx.
Python warnings from notebooks would be written to pre-tags, with
long error messages overflowing the flex layout. Now pre-tags
within highlight divs (`div.highlight`) wrap code.

--- a/insegel/static/css/insegel.css
+++ b/insegel/static/css/insegel.css
@@ -363,6 +363,10 @@ h1:hover .headerlink, h2:hover .headerlink, h3:hover .headerlink, h4:hover .head
   margin-bottom: 1em;
 }
 
+div.highlight > pre {
+  white-space: pre-wrap;
+}
+
 header {
   padding-top: 2em;
   display: flex;
