--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -207,3 +207,7 @@ h1, h2, h3, h4, h5, h6, dl dt, p.caption {
 .figure {
     margin-bottom: 1em;
 }
+
+div.highlight > pre {
+    white-space: pre-wrap;
+}
